[tool.poetry]
name = "meduzzen"
version = "0.1.0"
description = ""
authors = ["luianqi <1ayanabdrahmanova1@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.85.0"
uvicorn = "^0.18.3"
alembic = "^1.8.1"
psycopg2-binary = "^2.9.4"
python-decouple = "^3.6"
FastAPI-SQLAlchemy = "^0.2.1"
python-dotenv = "^0.21.0"
databases = "^0.6.1"
asyncpg = "^0.26.0"
redis = "^4.3.4"
passlib = "^1.7.4"
black = "^22.10.0"
pydantic = {extras = ["email"], version = "^1.10.2"}
bcrypt = "^4.0.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
