[tool.poetry]
name = "meduzzen"
version = "0.1.0"
description = ""
authors = ["luianqi <1ayanabdrahmanova1@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.85.0"
uvicorn = "^0.18.3"
alembic = "^1.8.1"
python-decouple = "^3.6"
FastAPI-SQLAlchemy = "^0.2.1"
python-dotenv = "^0.21.0"
databases = "^0.6.1"
redis = "^4.3.4"
passlib = "^1.7.4"
black = "^22.10.0"
pydantic = {extras = ["email"], version = "^1.10.2"}
bcrypt = "^4.0.1"
python-jose = "^3.3.0"
python-multipart = "^0.0.5"
psycopg2-binary = "^2.9.5"
asyncpg = "^0.27.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
